--- a/app/src/main/res/layout/test_card2.xml
+++ b/app/src/main/res/layout/test_card2.xml
@@ -5,8 +5,9 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="2dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true"
     android:layout_margin="8dp"
     android:gravity="center_horizontal"
     android:padding="25dp">
