--- a/swipedeck/src/main/res/values/attrs.xml
+++ b/swipedeck/src/main/res/values/attrs.xml
@@ -5,5 +5,6 @@
         <attr name="opacity_end" format="float"/>
         <attr name="rotation_degrees" format="float"/>
         <attr name="card_spacing" format="dimension"/>
+        <attr name="render_above" format="boolean"/>
     </declare-styleable>
 </resources>
