added ability to disable swiping on the deck via the SWIPE_ENABLED attribute

--- a/swipedeck/src/main/res/values/attrs.xml
+++ b/swipedeck/src/main/res/values/attrs.xml
@@ -6,5 +6,6 @@
         <attr name="rotation_degrees" format="float"/>
         <attr name="card_spacing" format="dimension"/>
         <attr name="render_above" format="boolean"/>
+        <attr name="swipe_enabled" format="boolean"/>
     </declare-styleable>
 </resources>
