fix for swipe disable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="480dp"
         android:padding="50dp"
         swipedeck:max_visible="3"
-        swipedeck:card_spacing="15dp"/>
+        swipedeck:card_spacing="15dp"
+        swipedeck:swipe_enabled="false"/>
 
     <Button
         android:id="@+id/button"
