--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
     <com.daprlabs.aaron.swipedeck.SwipeDeck
         android:id="@+id/swipe_deck"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
-        android:padding="50dp"
+        android:layout_height="650dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:paddingTop="50dp"
         swipedeck:max_visible="3"
-        swipedeck:card_spacing="15dp"
-        swipedeck:swipe_enabled="false"/>
+        swipedeck:render_above="false"
+        swipedeck:card_spacing="15dp"/>
 
     <Button
         android:id="@+id/button_left"
