Added new API method - "isDragEnabled". Allows to control dragging behaviour for particular card.
Use-case - don't allow dragging unless user clicked on the card first.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/swipe_deck"
         android:layout_width="match_parent"
         android:layout_height="650dp"
+        android:layout_gravity="center"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:paddingTop="50dp"
@@ -36,5 +37,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:text="swipe right" />
+
+    <CheckBox
+        android:id="@+id/checkbox_drag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:checked="true"
+        android:text="Drag enabled"/>
 
 </com.daprlabs.aaron.swipedeck.layouts.SwipeFrameLayout>
