--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daprlabs.aaron.swipedeck.layouts.SwipeFrameLayout
+<com.daprlabs.aaron.swipedeck.layouts.SwipeFrameLayout android:id="@+id/swipeLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/swipeLayout"
     android:orientation="vertical">
 
-    <com.daprlabs.aaron.swipedeck.SwipeDeck
-        android:id="@+id/swipe_deck"
+    <ViewFlipper
+        android:id="@+id/flipper"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingTop="50dp"
-        swipedeck:max_visible="3"
-        swipedeck:render_above="false"
-        swipedeck:card_spacing="15dp"/>
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+        <com.daprlabs.aaron.swipedeck.SwipeDeck
+            android:id="@+id/swipe_deck"
+            android:layout_width="match_parent"
+            android:layout_height="650dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:paddingTop="50dp"
+            swipedeck:card_spacing="15dp"
+            swipedeck:max_visible="3"
+            swipedeck:render_above="false" />
+    </ViewFlipper>
 
     <Button
         android:id="@+id/button_left"
@@ -24,12 +35,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:text="swipe left" />
+
     <Button
         android:id="@+id/button_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:text="add card" />
+
     <Button
         android:id="@+id/button_right"
         android:layout_width="wrap_content"
