Showing deck preview in layout editor preview. Removed unused/broken tests.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,11 @@
         android:layout_gravity="center"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:paddingTop="50dp"
+        android:paddingTop="96dp"
         swipedeck:max_visible="3"
         swipedeck:render_above="false"
-        swipedeck:card_spacing="15dp"/>
+        swipedeck:card_spacing="15dp"
+        swipedeck:preview_layout="@layout/test_card2"/>
 
     <Button
         android:id="@+id/button_left"
